# cnet-discord

./: .gitignore  Dockerfile  Pipfile  bot.py  celestenet.py  celestenet_chat_minimal.py  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
auth-testing/: Dockerfile  requirements.txt
