[tool.poetry]
name = "cnet-discord"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
"discord.py" = "^2.4.0"
python-dotenv = "^1.0.1"
websockets = "^13.1"
requests = "^2.32.3"
ptvsd = "^4.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
